# mlops-mlops_2

./: .flake8  .gitignore  CI-CD-GUIDE.md  CI-CD-IMPLEMENTATION-REPORT.md  Dockerfile  GITHUB-ACTIONS-SETUP.md  QUICK-START.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup_monitor_env.ps1  setup_monitor_env.sh
.github/workflows/: ci-cd.yml  ci.yml  code-quality.yml  release.yml
core/: config.py  utils.py
data-task/: .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt  setup.cfg
data-task/core/: __init__.py  config.py  s3_client.py  utils.py
data-task/src/: collector.py  data_generator.py  train.py
data-task/tests/: conftest.py  test_collector.py  test_preprocessor.py  test_train.py
k8s/: deployment.yaml
monitoring/: alert_rules.yml  prometheus.yml
scripts/: setup-ci-cd.sh  verify-secrets.sh
src/: collector.py  preprocessor.py  train.py
tests/: conftest.py  test_collector.py  test_preprocessor.py  test_train.py
