[build-backend]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-tmdb"
version = "0.1.0"
description = "TMDB Movie Success Prediction Pipeline with MLOps best practices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "MLOps Team" }
]
keywords = [
    "mlops",
    "machine-learning",
    "data-pipeline",
    "tmdb",
    "aws",
    "ci-cd"
]

dependencies = [
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "isort>=5.11.0",
    "mypy>=0.990",
    "bandit>=1.7.4",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools]
packages = ["src", "core"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src", "core"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov=core --cov-report=term-missing"
